--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
 	</head>
 	<body class="is-preload">
 
+
+		<nav id="topnav">
+			<ul>
+				<li><a href="#top" id="top-link"><span class="icon fa-home">Intro</span></a></li>
+				<li><a href="#portfolio" id="portfolio-link"><span class="icon fa-th">Portfolio</span></a></li>
+				<li><a href="#about" id="about-link"><span class="icon fa-user">About Me</span></a></li>
+				<li><a href="#contact" id="contact-link"><span class="icon fa-envelope">Contact</span></a></li>
+			</ul>
+		</nav>
+
 		<!-- Header -->
 			<div id="header">
 
@@ -46,11 +56,7 @@
 
 					<!-- Social Icons -->
 						<ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-							<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="https://github.com/Trannon1" class="icon fa-github"><span class="label">Github</span></a></li>
 						</ul>
 
 				</div>
@@ -62,7 +68,10 @@
 
 				<!-- Intro -->
 					<section id="top" class="one dark cover">
-						<div class="container">
+						<div class="w3-content w3-section" style="max-width:500px">
+								<img class="mySlides" src="images/ump45.png" style="width:100%">
+								<img class="mySlides" src="images/M4A1.png" style="width:100%">
+								<img class="mySlides" src="images/ST_AR-15.png" style="width:100%">
 
 							<header>
 								<h2 class="alt">Hi! I'm <strong>Bryan</strong>, a Software Developer.</h2>
@@ -78,7 +87,7 @@
 
 				<!-- Portfolio -->
 					<section id="portfolio" class="two">
-						<div class="container">
+						<div class="slideshow-container">
 
 							<header>
 								<h2>Portfolio</h2>
@@ -193,12 +202,12 @@
 			</div>
 
 		<!-- Scripts -->
-			<script src="https://code.jquery.com/jquery-3.4.1.min.js"
-		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+			<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
 			<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.scrollex/0.2.1/jquery.scrollex.min.js"></script>
 			<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.js"></script>
 			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="https://cdnjs.cloudflare.com/ajax/libs/javascript.util/0.12.12/javascript.util.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
 
