Added linkedin link

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 					<!-- Social Icons -->
 						<ul class="icons">
 							<li><a href="https://github.com/Trannon1" class="icon fa-github"><span class="label">Github</span></a></li>
+							<li><a href="www.linkedin.com/in/trannon1" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
 						</ul>
 
 				</div>
@@ -72,7 +73,7 @@
 								<img class="mySlides" src="images/ump45.png" style="width:100%">
 								<img class="mySlides" src="images/M4A1.png" style="width:100%">
 								<img class="mySlides" src="images/ST_AR-15.png" style="width:100%">
-
+								<img class="mySlides" src="images/HK416.png" style="width:100%">
 							<header>
 								<h2 class="alt">Hi! I'm <strong>Bryan</strong>, a Software Developer.</h2>
 								<p>Aurum es Potentas, Gold is power (In other words, squash your problems with money)</p>
